# physics-env

./: .dockerignore  .gitignore  Dockerfile  README.md  grader.py  inference.py  models.py  openenv.yaml  problems.py  pyproject.toml  requirements.txt
server/: __init__.py  app.py  physics_environment.py
