[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-env"
version = "1.0.0"
description = "OpenEnv RL environment for multi-domain physics problem solving"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0"   # <-- ADDED for the validator
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

# <-- ADDED Entry Point for the validator
[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
# <-- ADDED to ensure all your custom files are packaged correctly
include = ["server*", "models*", "problems*", "grader*"]
